# placeholder

./: docker-compose.yml  pyproject.toml
api/: enums.py  main.py
data_models/: README.md  assets.py  exchanges.py  markets.py  rates.py
tests/api/: test_api.py  test_enums.py
