[tool.poetry]
name = "placeholder"
version = "0.1.0"
description = ""
authors = ["DavidJS01 <davidshipmanchs2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
alembic = "^1.12.0"
pydantic = "^2.4.2"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
